# colorExtract

./: .gitignore  LICENSE  README.md  index.html  package.json  tsconfig.app.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
docs/: architecture.md  core-algorithm.md  data-flow.md  hsv-model.md  index.md  issues.md  modules.md
src/: App.vue  ColorDropper.vue  ColorExtract.vue  ColorInput.vue  MoveArea.vue  color.ts  common.tsx  html.d.ts  types.d.ts  util.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
