[package]
name = "color-extract"
version = "0.1.0"
description = "Color Extract"
authors = ["lhf663"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.11.2", features = ["macos-private-api"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
tauri = { version = "2.11.2", features = ["macos-private-api"] }

[dependencies]
log = "0.4.31"
tauri-plugin-log = "2.8.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
